--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="dark_bleu">#005399</color>
     <color name="snow">#FFFAFA</color>
     <color name="light_gray">#DCDDDF</color>
+    <color name="green">#4CAF50</color>
 </resources>
