--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.OrlandoRecycle" parent="Theme.Material3.DayNight.NoActionBar">
+<!--    <style name="Base.Theme.OrlandoRecycle" parent="Theme.Material3.DayNight.NoActionBar">-->
+    <style name="Base.Theme.OrlandoRecycle" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/dark_bleu</item>
         <item name="colorPrimaryDark">@color/dark_bleu</item>
         <item name="colorOnPrimary">@color/white</item>
