--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@color/snow"
+        android:fitsSystemWindows="false"
         app:itemIconTint="@color/black"
         app:itemTextColor="@color/black"
         app:menu="@menu/main_menu" />
@@ -47,7 +48,9 @@
             android:id="@+id/bottomAppBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom">
+            android:layout_gravity="bottom"
+            app:fabAnchorMode="embed"
+            app:fabAnimationMode="scale">
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottomNavigationView"
@@ -66,7 +69,9 @@
             android:layout_height="wrap_content"
             android:contentDescription="@string/scan_button"
             android:src="@drawable/baseline_document_scanner_24"
+            android:scaleType="center"
             app:backgroundTint="@color/dark_bleu"
+            app:elevation="4dp"
             app:layout_anchor="@id/bottomAppBar" />
 
 
