--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -140,7 +140,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/materials"
+        android:text="@string/last_scanned"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_marginTop="15dp"/>
