--- a/app/src/main/res/layout/item_design.xml
+++ b/app/src/main/res/layout/item_design.xml
@@ -8,9 +8,11 @@
     app:cardCornerRadius="10dp"
     android:backgroundTint="@color/white"
     android:layout_gravity="center"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginEnd="10dp">
 
     <LinearLayout
+        android:id="@+id/itemLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
@@ -19,6 +21,7 @@
         android:padding="10dp">
 
         <ImageView
+            android:id="@+id/itemImageIV"
             android:layout_width="match_parent"
             android:layout_height="68dp"
             android:contentDescription="@string/material"
@@ -26,7 +29,7 @@
 
 
         <TextView
-            android:id="@+id/itemNameHolderDesign"
+            android:id="@+id/itemNameTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/plastic"
@@ -34,7 +37,7 @@
             android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/itemPriceHolderDesign"
+            android:id="@+id/itemPointsTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/default_points"
