--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -167,6 +167,7 @@
         android:text="@string/progress"
         android:textColor="@color/black"
         android:textStyle="bold"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="15dp"/>
 
     <androidx.cardview.widget.CardView
