--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -10,21 +10,39 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Recycling Drop-Off Locations:\n\nEmbedded Interactive Map Will Go Below"
+        android:textSize="28sp"
+        android:text="Recycling Drop-Off Locations\n"
         android:gravity="start"
         android:layout_weight="1"
         android:layout_marginLeft="10dp" />
 
-    <!-- Map Goes Here -->
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/orlando_map_1"
-        android:layout_marginTop="-100dp"
+    <EditText
+        android:id="@+id/addressInput"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:hint="Enter address"
+        android:textColorHint="@android:color/black"
+        android:inputType="text"
+        android:background="@drawable/rounded_input_box"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="-60dp"
+        android:padding="10dp"
         />
+
+    <!-- Map Goes Here -->
+    <org.osmdroid.views.MapView
+        android:id="@+id/map"
+        android:layout_width="390dp"
+        android:layout_height="390dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+
+        />
+
+
+
 
     <!-- Recycling Drop-Off Locations -->
     <TextView
