--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -150,7 +150,8 @@
         android:text="@string/last_scanned"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"/>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
