--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -149,7 +149,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Don't have an account?"
+                android:text="@string/don_t_have_an_account"
                 android:textColor="@color/black"
                 android:textSize="11sp"
                 tools:ignore="TextContrastCheck" />
@@ -159,7 +159,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:linksClickable="true"
-                android:text="Sign up"
+                android:text="@string/sign_up"
                 android:textColor="@color/black"
                 android:textSize="11sp"
                 android:textStyle="bold"
